--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-menubar": "^1.1.16",
     "argon2": "^0.44.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
+    "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
     "wildmongowhispers": "^1.4.4"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
