--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "redis": "^5.8.2",
     "tailwind-merge": "^3.3.1",
     "wildmongowhispers": "^1.4.4"
   },
