--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-menubar": "^1.1.16",
     "argon2": "^0.44.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "discord.js": "^14.22.1",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
     "next": "^15.5.3",
+    "puppeteer": "^24.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "redis": "^5.8.2",
