--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
     "next": "^15.5.3",
+    "node-cron": "^4.2.1",
     "puppeteer": "^24.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -33,6 +34,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.11",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
